--- a/App/Dedale/src/theme/_variables.scss
+++ b/App/Dedale/src/theme/_variables.scss
@@ -2,8 +2,9 @@
 // http://ionicframework.com/docs/v2/theming/
 
 @import "tools/fonts";
-@import "tools/grids";
 @import "tools/mixins";
+@import "tools/media-queries";
+@import "tools/grids";
 
 @import "ionic.globals";
 
