--- a/App/Dedale/src/theme/tools/_grids.scss
+++ b/App/Dedale/src/theme/tools/_grids.scss
@@ -1,5 +1,4 @@
-@import "../../../node_modules/susy/sass/susy";
-@import "../../../node_modules/sass-mediaqueries/media-queries";
+@import "node_modules/susy/sass/susy";
 
 $susy: (
 	flow: ltr,
