--- a/Site/Dedale_New/resources/assets/sass/app.scss
+++ b/Site/Dedale_New/resources/assets/sass/app.scss
@@ -1,4 +1,6 @@
 @import "tools/mixins";
+@import "tools/media-queries";
+@import "tools/function";
 @import "tools/base";
 
 a.logo_nav { @include size(40px, f); display: block; margin-right: 10px;
@@ -13,3 +15,4 @@ nav.ui.menu { margin-bottom: 20px; padding-top: 10px; }
 .ui.card>.content .active.star.icon, .ui.cards>.card>.content .active.star.icon { color: #ffb70a !important; }
 
 @import "pages/feed";
+@import "pages/user-page";
